# el_drf

./: README.md  Welcome file.md  data_recovery.json  data_users_recovery.json  docker-compose.yaml  pyproject.toml  requirements.txt
config/: celery.py  hi.py  permission.py  settings.py  urls.py
lms/: admin.py  models.py  paginators.py  serelizers.py  serializers.py  servises.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_preview_alter_lesson_video_url.py  0003_alter_course_lessons_alter_course_preview.py  0004_alter_course_options_alter_lesson_options_and_more.py  0005_lesson_proprietor.py  0006_course_proprietor_lesson_created_at.py  0007_alter_lesson_video_url.py  0008_course_price_course_stripe_price_id_and_more.py  0009_alter_course_stripe_price_id_and_more.py  0010_alter_course_lessons.py
users/: admin.py  forms.py  models.py  permission.py  serializers.py  servises.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_company_delete_company.py  0003_transaction.py  0004_alter_transaction_options_and_more.py  0005_remove_user_avatar_remove_user_email_is_verify_and_more.py  0006_alter_user_options.py  0007_subscribe.py  0008_remove_subscribe_user_subscribe_proprietor_and_more.py  0009_remove_subscribe_courses_subscribe_courses.py  0010_transaction_status_alter_transaction_payment_amount.py  0011_transaction_strip_session_id.py  0012_remove_transaction_payment_amount_and_more.py  0013_alter_transaction_strip_session_id.py  0014_transaction_url_to_pay.py  (+1 more)
(+14 files in other folders)
